load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//kernel:fmt.bzl", "fmt_test")
load("//kernel:tagged.bzl", "tagged_file")
load("//kernel/gen-versions:cue_language.bzl", "CUE_LANGUAGE_VERSION")

# All git-tracked files in this package must be registered with Bazel.
exports_files(["module.cue"])

# Used by //kernel/spec/test:fork_smoke (AIDR-00071).
filegroup(
    name = "module_files",
    srcs = ["module.cue"],
    visibility = ["//kernel/spec:__pkg__"],
)

# ==============================================================================
# module.cue version sync: inject CUE language version from CUE schema
# ==============================================================================

genrule(
    name = "module_cue_gen",
    srcs = ["module.cue"],
    outs = ["module_gen.cue"],
    cmd = "sed -E 's/(version:[[:space:]]*\"v)[^\"]*(\")/\\1" + CUE_LANGUAGE_VERSION + "\\2/' $(location module.cue) > $@",
)

sh_binary(
    name = "module_cue_sync",
    srcs = ["//gen/.mise/tasks:gen-sync.clj"],
    args = [
        "cue.mod/module.cue",
        "$(location :module_cue_gen)",
    ],
    data = [
        ":module_cue_gen",
        "//kernel/lib:defn.clj",
    ],
    env = {"BBS_LIB": "$(rootpath //kernel/lib:defn.clj)"},
)

sh_test(
    name = "module_cue_drift_test",
    timeout = "short",
    srcs = ["//gen/.mise/tasks:gen-drift.clj"],
    args = [
        "$(location module.cue)",
        "$(location :module_cue_gen)",
    ],
    data = [
        "module.cue",
        ":module_cue_gen",
        "//kernel/lib:defn.clj",
    ],
    env = {"BBS_LIB": "$(rootpath //kernel/lib:defn.clj)"},
    tags = ["drift"],
)

fmt_test(
    name = "build_bazel_fmt",
    src = "BUILD.bazel",
    tool = "buildifier",
)

# NOTE: cue.mod/module.cue cannot be formatted with `cue fmt` --
# CUE forbids loading packages inside cue.mod/.

# File type tags
tagged_file(
    name = "build_bazel_tag",
    src = "BUILD.bazel",
    tags = [
        "bazel",
        "bazel-build",
    ],
)

tagged_file(
    name = "module_cue_tag",
    src = "module.cue",
    tags = [
        "config",
        "cue",
        "patched",
    ],
)

[fmt_test(
    name = "dispatch_cue_fmt",
    src = src,
    tool = "cue",
) for src in glob(["dispatch.cue"], allow_empty = True)]

[tagged_file(
    name = "dispatch_cue_tag",
    src = src,
    tags = [
        "cue",
        "source",
    ],
) for src in glob(["dispatch.cue"], allow_empty = True)]
