load("//kernel:fmt.bzl", "fmt_test")
load("//kernel:tagged.bzl", "tagged_file", "tagged_package")

tagged_file(
    name = "build_bazel_tag",
    src = "BUILD.bazel",
    tags = [
        "bazel",
        "bazel-build",
    ],
)

tagged_file(
    name = "license_tag",
    src = "LICENSE",
    tags = [
        "doc",
    ],
)

fmt_test(
    name = "build_bazel_fmt",
    src = "BUILD.bazel",
    tool = "buildifier",
)

fmt_test(
    name = "license_fmt",
    src = "LICENSE",
    tool = "textfmt",
)

tagged_package(exclude = [
    "BUILD.bazel",
    "LICENSE",
])
