load("//kernel:fmt.bzl", "fmt_test")
load("//kernel:tagged.bzl", "tagged_file")

exports_files([
    "app.bzl",
    "app.cue",
    "checksum-test.clj",
    "no-namespaces-test.clj",
    "no-secrets-test.clj",
    "policy.cue",
    "templates.cue",
])

fmt_test(
    name = "build_bazel_fmt",
    src = "BUILD.bazel",
    tool = "buildifier",
)

fmt_test(
    name = "app_cue_fmt",
    src = "app.cue",
    tool = "cue",
)

fmt_test(
    name = "app_bzl_fmt",
    src = "app.bzl",
    tool = "buildifier",
)

fmt_test(
    name = "checksum_test_fmt",
    src = "checksum-test.clj",
    tool = "cljstyle",
)

fmt_test(
    name = "no_namespaces_test_fmt",
    src = "no-namespaces-test.clj",
    tool = "cljstyle",
)

fmt_test(
    name = "no_secrets_test_fmt",
    src = "no-secrets-test.clj",
    tool = "cljstyle",
)

tagged_file(
    name = "build_bazel_tag",
    src = "BUILD.bazel",
    tags = [
        "bazel",
        "bazel-build",
    ],
)

tagged_file(
    name = "app_cue_tag",
    src = "app.cue",
    tags = [
        "cue",
        "source",
    ],
)

tagged_file(
    name = "app_bzl_tag",
    src = "app.bzl",
    tags = [
        "bazel",
        "bazel-macro",
    ],
)

tagged_file(
    name = "checksum_test_tag",
    src = "checksum-test.clj",
    tags = [
        "clojure",
        "script",
    ],
)

tagged_file(
    name = "no_namespaces_test_tag",
    src = "no-namespaces-test.clj",
    tags = [
        "clojure",
        "script",
    ],
)

tagged_file(
    name = "no_secrets_test_tag",
    src = "no-secrets-test.clj",
    tags = [
        "clojure",
        "script",
    ],
)

fmt_test(
    name = "templates_cue_fmt",
    src = "templates.cue",
    tool = "cue",
)

tagged_file(
    name = "templates_cue_tag",
    src = "templates.cue",
    tags = [
        "cue",
        "source",
    ],
)

fmt_test(
    name = "policy_cue_fmt",
    src = "policy.cue",
    tool = "cue",
)

tagged_file(
    name = "policy_cue_tag",
    src = "policy.cue",
    tags = [
        "cue",
        "source",
    ],
)

[fmt_test(
    name = "dispatch_cue_fmt",
    src = src,
    tool = "cue",
) for src in glob(["dispatch.cue"], allow_empty = True)]

[tagged_file(
    name = "dispatch_cue_tag",
    src = src,
    tags = [
        "cue",
        "source",
    ],
) for src in glob(["dispatch.cue"], allow_empty = True)]
