"""Go parent command interface -- groups child subcommands."""

load("//kernel:fmt.bzl", "fmt_test")
load("//kernel:tagged.bzl", "tagged_file")

exports_files(["templates.cue"])

fmt_test(
    name = "build_bazel_fmt",
    src = "BUILD.bazel",
    tool = "buildifier",
)

fmt_test(
    name = "templates_cue_fmt",
    src = "templates.cue",
    tool = "cue",
)

tagged_file(
    name = "build_bazel_tag",
    src = "BUILD.bazel",
    tags = [
        "bazel",
        "bazel-build",
    ],
)

tagged_file(
    name = "templates_cue_tag",
    src = "templates.cue",
    tags = [
        "cue",
        "source",
    ],
)

[fmt_test(
    name = "dispatch_cue_fmt",
    src = src,
    tool = "cue",
) for src in glob(["dispatch.cue"], allow_empty = True)]

[tagged_file(
    name = "dispatch_cue_tag",
    src = src,
    tags = [
        "cue",
        "source",
    ],
) for src in glob(["dispatch.cue"], allow_empty = True)]
