load("//kernel:fmt.bzl", "fmt_test")
load("//kernel:tagged.bzl", "tagged_file")

fmt_test(
    name = "build_bazel_fmt",
    src = "BUILD.bazel",
    tool = "buildifier",
)

fmt_test(
    name = "main_tf_fmt",
    src = "main.tf",
    tool = "tofu",
)

fmt_test(
    name = "variables_tf_fmt",
    src = "variables.tf",
    tool = "tofu",
)

fmt_test(
    name = "outputs_tf_fmt",
    src = "outputs.tf",
    tool = "tofu",
)

tagged_file(
    name = "build_bazel_tag",
    src = "BUILD.bazel",
    tags = [
        "bazel",
        "bazel-build",
    ],
)

tagged_file(
    name = "main_tf_tag",
    src = "main.tf",
    tags = ["config"],
)

tagged_file(
    name = "variables_tf_tag",
    src = "variables.tf",
    tags = ["config"],
)

tagged_file(
    name = "outputs_tf_tag",
    src = "outputs.tf",
    tags = ["config"],
)
